finished fine tuning the model parameters

--- a/module 3 final assignment/final assignment part 1.ipynb
+++ b/module 3 final assignment/final assignment part 1.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 771948_A23_T3A - Group Work Assignment #\n",
     "# Part 1 - Numerical and categorical feature classification problem #\n",
-    "## Assignment by Chris Mintz 202369825 and Antonia Agunbiade [STUDENT ID HERE] ##"
+    "## Assignment by Chris Mintz 202369825 and Antonia Agunbiade 202375309 ##"
    ]
   },
   {
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
     "\n",
     "# Now set parameters for XGBoost\n",
     "params = {\n",
-    "    'objective': 'reg:squarederror',  \n",
+    "    'objective': 'binary:logistic',  \n",
     "    'max_depth': 6,\n",
     "    'eta': 0.3,\n",
     "    'eval_metric': 'rmse',\n",
@@ -758,7 +758,11 @@
     "\n",
     "# We'll look at the ideal number of rounds in hyperparameter tuning but for now let's use 100 rounds\n",
     "n = 100\n",
-    "model = xgb.train(params, dtrain_reg, n)"
+    "model = xgb.train(\n",
+    "    params, \n",
+    "    dtrain_reg, \n",
+    "    n\n",
+    "    )"
    ]
   },
   {
@@ -837,37 +841,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-rmse:0.36082\tvalidation-rmse:0.38908\n",
-      "[1]\ttrain-rmse:0.26543\tvalidation-rmse:0.32125\n",
-      "[2]\ttrain-rmse:0.19981\tvalidation-rmse:0.28007\n",
-      "[3]\ttrain-rmse:0.14988\tvalidation-rmse:0.25651\n",
-      "[4]\ttrain-rmse:0.11937\tvalidation-rmse:0.24833\n",
-      "[5]\ttrain-rmse:0.09830\tvalidation-rmse:0.24406\n",
-      "[6]\ttrain-rmse:0.08338\tvalidation-rmse:0.24472\n",
-      "[7]\ttrain-rmse:0.07192\tvalidation-rmse:0.24560\n",
-      "[8]\ttrain-rmse:0.06233\tvalidation-rmse:0.24696\n",
-      "[9]\ttrain-rmse:0.05445\tvalidation-rmse:0.24737\n",
-      "[10]\ttrain-rmse:0.04949\tvalidation-rmse:0.24795\n",
-      "[11]\ttrain-rmse:0.04569\tvalidation-rmse:0.24799\n",
-      "[12]\ttrain-rmse:0.04161\tvalidation-rmse:0.24933\n",
-      "[13]\ttrain-rmse:0.03936\tvalidation-rmse:0.24940\n",
-      "[14]\ttrain-rmse:0.03767\tvalidation-rmse:0.24975\n",
-      "[15]\ttrain-rmse:0.03667\tvalidation-rmse:0.25132\n"
+      "Best RMSE:  0.192\n"
      ]
     }
    ],
    "source": [
+    "# pull out the best RMSE from the cv_results\n",
+    "best_rmse = cv_results['test-rmse-mean'].min()\n",
+    "print(f'Best tested RMSE: {best_rmse: .3f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best learning rate: 0.1\n",
+      "Best max depth: 9\n",
+      "Best min child weight: 5\n",
+      "Best number of estimators: 100\n",
+      "Best gamma: 0.1\n",
+      "Best gamma: 0.5\n",
+      "Best subsample: 0.7\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\skyma\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\xgboost\\core.py:160: UserWarning: [12:45:30] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0b3782d1791676daf-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:742: \n",
+      "Parameters: { \"col_sample_bytree\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now use a hyperparameter grid to test different hyperparameters and effectiveness\n",
+    "from sklearn.model_selection import StratifiedKFold, GridSearchCV\n",
+    "\n",
+    "param_grid = {\n",
+    "    'learning_rate': [0.1, 0.3, 0.5, 1],\n",
+    "    'max_depth': [3, 6, 9],\n",
+    "    'min_child_weight': [1, 2, 3, 4, 5],\n",
+    "    'n_estimators': [100, 200, 300],\n",
+    "    'gamma': [0, 0.1, 0.2, 0.3],\n",
+    "    'subsample': [0.5, 0.7, 1]\n",
+    "}\n",
+    "\n",
+    "param_model = xgb.XGBRegressor()\n",
+    "\n",
+    "param_cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "grid_search = GridSearchCV(param_model, param_grid, cv=param_cv, scoring='neg_mean_squared_error', n_jobs=-1)\n",
+    "grid_search.fit(X, y)\n",
+    "\n",
+    "# Print the best hyperparameters\n",
+    "print(f'Best learning rate: {grid_search.best_params_[\"learning_rate\"]}')\n",
+    "print(f'Best max depth: {grid_search.best_params_[\"max_depth\"]}')\n",
+    "print(f'Best min child weight: {grid_search.best_params_[\"min_child_weight\"]}')\n",
+    "print(f'Best number of estimators: {grid_search.best_params_[\"n_estimators\"]}')\n",
+    "print(f'Best gamma: {grid_search.best_params_[\"gamma\"]}')\n",
+    "print(f'Best subsample: {grid_search.best_params_[\"subsample\"]}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-rmse:0.38635\tvalidation-rmse:0.39255\n",
+      "[1]\ttrain-rmse:0.30833\tvalidation-rmse:0.32819\n",
+      "[2]\ttrain-rmse:0.26084\tvalidation-rmse:0.28579\n",
+      "[3]\ttrain-rmse:0.22654\tvalidation-rmse:0.26239\n",
+      "[4]\ttrain-rmse:0.20616\tvalidation-rmse:0.24722\n",
+      "[5]\ttrain-rmse:0.19337\tvalidation-rmse:0.24172\n",
+      "[6]\ttrain-rmse:0.18684\tvalidation-rmse:0.23680\n",
+      "[7]\ttrain-rmse:0.18210\tvalidation-rmse:0.23460\n",
+      "[8]\ttrain-rmse:0.17725\tvalidation-rmse:0.23058\n",
+      "[9]\ttrain-rmse:0.17319\tvalidation-rmse:0.23193\n",
+      "[10]\ttrain-rmse:0.17026\tvalidation-rmse:0.22581\n",
+      "[11]\ttrain-rmse:0.16837\tvalidation-rmse:0.22417\n",
+      "[12]\ttrain-rmse:0.16773\tvalidation-rmse:0.21873\n",
+      "[13]\ttrain-rmse:0.16750\tvalidation-rmse:0.22066\n",
+      "[14]\ttrain-rmse:0.16747\tvalidation-rmse:0.22155\n",
+      "[15]\ttrain-rmse:0.16667\tvalidation-rmse:0.21950\n",
+      "[16]\ttrain-rmse:0.16683\tvalidation-rmse:0.22186\n",
+      "[17]\ttrain-rmse:0.16640\tvalidation-rmse:0.22166\n",
+      "[18]\ttrain-rmse:0.16551\tvalidation-rmse:0.21709\n",
+      "[19]\ttrain-rmse:0.16550\tvalidation-rmse:0.21512\n",
+      "[20]\ttrain-rmse:0.16494\tvalidation-rmse:0.21724\n",
+      "[21]\ttrain-rmse:0.16462\tvalidation-rmse:0.21484\n",
+      "[22]\ttrain-rmse:0.16411\tvalidation-rmse:0.21553\n",
+      "[23]\ttrain-rmse:0.16430\tvalidation-rmse:0.21362\n",
+      "[24]\ttrain-rmse:0.16371\tvalidation-rmse:0.21314\n",
+      "[25]\ttrain-rmse:0.16338\tvalidation-rmse:0.21196\n",
+      "[26]\ttrain-rmse:0.16256\tvalidation-rmse:0.20959\n",
+      "[27]\ttrain-rmse:0.16128\tvalidation-rmse:0.20653\n",
+      "[28]\ttrain-rmse:0.16150\tvalidation-rmse:0.20690\n",
+      "[29]\ttrain-rmse:0.16073\tvalidation-rmse:0.20726\n",
+      "[30]\ttrain-rmse:0.15989\tvalidation-rmse:0.20864\n",
+      "[31]\ttrain-rmse:0.16010\tvalidation-rmse:0.20965\n",
+      "[32]\ttrain-rmse:0.15975\tvalidation-rmse:0.20859\n",
+      "[33]\ttrain-rmse:0.15945\tvalidation-rmse:0.20862\n",
+      "[34]\ttrain-rmse:0.15914\tvalidation-rmse:0.20705\n",
+      "[35]\ttrain-rmse:0.15899\tvalidation-rmse:0.20670\n",
+      "[36]\ttrain-rmse:0.15858\tvalidation-rmse:0.20669\n",
+      "[37]\ttrain-rmse:0.15807\tvalidation-rmse:0.20619\n",
+      "[38]\ttrain-rmse:0.15779\tvalidation-rmse:0.20607\n",
+      "[39]\ttrain-rmse:0.15796\tvalidation-rmse:0.20665\n",
+      "[40]\ttrain-rmse:0.15786\tvalidation-rmse:0.20660\n",
+      "[41]\ttrain-rmse:0.15715\tvalidation-rmse:0.20575\n",
+      "[42]\ttrain-rmse:0.15609\tvalidation-rmse:0.20431\n",
+      "[43]\ttrain-rmse:0.15616\tvalidation-rmse:0.20325\n",
+      "[44]\ttrain-rmse:0.15579\tvalidation-rmse:0.20149\n",
+      "[45]\ttrain-rmse:0.15531\tvalidation-rmse:0.20491\n",
+      "[46]\ttrain-rmse:0.15588\tvalidation-rmse:0.20514\n",
+      "[47]\ttrain-rmse:0.15598\tvalidation-rmse:0.20573\n",
+      "[48]\ttrain-rmse:0.15546\tvalidation-rmse:0.20309\n",
+      "[49]\ttrain-rmse:0.15625\tvalidation-rmse:0.20358\n",
+      "[50]\ttrain-rmse:0.15593\tvalidation-rmse:0.20308\n",
+      "[51]\ttrain-rmse:0.15613\tvalidation-rmse:0.20300\n",
+      "[52]\ttrain-rmse:0.15544\tvalidation-rmse:0.20482\n",
+      "[53]\ttrain-rmse:0.15553\tvalidation-rmse:0.20582\n",
+      "[54]\ttrain-rmse:0.15462\tvalidation-rmse:0.20330\n"
+     ]
+    }
+   ],
+   "source": [
+    "#now apply the new hyperparameters to the re-fit the model\n",
+    "#note, eta = learning rate\n",
+    "params_tuned = {\n",
+    "    'objective': 'binary:logistic',  \n",
+    "    'max_depth': 9,\n",
+    "    'eta': 0.3,\n",
+    "    'gamma': 0.3,\n",
+    "    'subsample': 0.7,\n",
+    "    'min_child_weight': 5,\n",
+    "    'eval_metric': 'rmse',\n",
+    "    'tree_method': 'hist'\n",
+    "}\n",
+    "\n",
     "evals = [(dtrain_reg, 'train'), (dtest_reg, 'validation')]\n",
     "\n",
     "model = xgb.train(\n",
-    "    params,\n",
+    "    params_tuned,\n",
     "    dtrain_reg,\n",
     "    num_boost_round=200,\n",
     "    evals=evals,\n",
@@ -880,7 +1012,7 @@
    "metadata": {},
    "source": [
     "## <b>Observation</b>\n",
-    "The training has early-stopped at 15 rounds. It is here that the training loss is low but also takes the slightly fluctuating validation loss into account which we want to watch to ensure we are not getting into overfitting with too many rounds.\n",
+    "The training has early-stopped at less than 200 rounds. It is here that the training loss is low but also takes the slightly fluctuating validation loss into account which we want to watch to ensure we are not getting into overfitting with too many rounds.\n",
     "## "
    ]
   },
@@ -919,17 +1051,12 @@
    ],
    "source": [
     "# try a very high number of rounds to see if we can get a better RMSE for validation\n",
-    "params_b = {\n",
-    "    'objective':'reg:squarederror', \n",
-    "    'max_depth':6, \n",
-    "    'eta':0.3, \n",
-    "    'subsample':0.8, \n",
-    "    'colsample_bytree':0.8\n",
-    "    }\n",
+    "# if overfitting shows up we'll stick with the original model\n",
+    "\n",
     "n_b = 1000\n",
     "\n",
     "model_b = xgb.train(\n",
-    "    params_b, \n",
+    "    params_tuned, \n",
     "    dtrain_reg, \n",
     "    n_b, \n",
     "    evals=evals, \n",
