almost done with viz

--- a/module 3 final assignment/final assignment part 1.ipynb
+++ b/module 3 final assignment/final assignment part 1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "19  2019-04-04 11:39:51  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "max      1.000000  539.920000  794.848000  180.000000  457.150000"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\skyma\\AppData\\Local\\Temp\\ipykernel_10692\\1019460975.py:5: UserWarning: The argument 'infer_datetime_format' is deprecated and will be removed in a future version. A strict version of it is now the default, see https://pandas.pydata.org/pdeps/0004-consistent-to-datetime-parsing.html. You can safely remove this argument.\n",
+      "C:\\Users\\skyma\\AppData\\Local\\Temp\\ipykernel_24904\\1019460975.py:5: UserWarning: The argument 'infer_datetime_format' is deprecated and will be removed in a future version. A strict version of it is now the default, see https://pandas.pydata.org/pdeps/0004-consistent-to-datetime-parsing.html. You can safely remove this argument.\n",
       "  dates = pd.to_datetime(dates, infer_datetime_format=True, errors='coerce')\n"
      ]
     }
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +713,7 @@
     "# Task 2 - Build a classifier for the classification problem using one of the specified models (logistic regression, decision trees, random forests, or artificial neural networks) #\n",
     "\n",
     "### \n",
-    "<b>Refereces</b>\n",
+    "<b>References</b>\n",
     "\n",
     "DataCamp. (2023). Learn XGBoost in Python: A Step-by-Step Tutorial. Available at: https://www.datacamp.com/tutorial/xgboost-in-python [Accessed 19 Aug. 2024].\n",
     "\n",
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,14 +774,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE of the base model:  0.260\n"
+      "RMSE of the base model:  0.208\n"
      ]
     }
    ],
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -805,20 +805,25 @@
      "output_type": "stream",
      "text": [
       "    train-rmse-mean  train-rmse-std  test-rmse-mean  test-rmse-std\n",
-      "0          0.359950        0.001390        0.373904       0.002923\n",
-      "1          0.261928        0.000928        0.293481       0.006864\n",
-      "2          0.194283        0.002384        0.246405       0.012310\n",
-      "3          0.146789        0.002882        0.220290       0.015217\n",
-      "4          0.113376        0.003406        0.207328       0.018781\n",
-      "5          0.090349        0.002964        0.200462       0.019948\n",
-      "6          0.073828        0.002580        0.196181       0.021589\n",
-      "7          0.062180        0.002946        0.193530       0.022102\n",
-      "8          0.052818        0.003235        0.192888       0.023142\n",
-      "9          0.045744        0.002899        0.192215       0.023588\n",
-      "10         0.040799        0.003040        0.191935       0.023863\n",
-      "11         0.037110        0.003348        0.191977       0.024354\n",
-      "12         0.034093        0.003328        0.192074       0.024766\n",
-      "13         0.031694        0.003509        0.191736       0.025091\n"
+      "0          0.374688        0.001901        0.379958       0.002384\n",
+      "1          0.291967        0.002894        0.307014       0.006842\n",
+      "2          0.234550        0.003283        0.258523       0.011006\n",
+      "3          0.195057        0.004162        0.229269       0.014514\n",
+      "4          0.167249        0.005227        0.208540       0.017469\n",
+      "5          0.148003        0.006094        0.197105       0.018791\n",
+      "6          0.134082        0.006248        0.187272       0.023858\n",
+      "7          0.124377        0.007194        0.183540       0.026014\n",
+      "8          0.116313        0.007408        0.180078       0.027207\n",
+      "9          0.109120        0.007731        0.178278       0.027445\n",
+      "10         0.103634        0.008282        0.176349       0.028497\n",
+      "11         0.098274        0.007286        0.175121       0.028945\n",
+      "12         0.094310        0.007514        0.175397       0.028695\n",
+      "13         0.090890        0.006831        0.174290       0.029040\n",
+      "14         0.086948        0.007373        0.173153       0.028988\n",
+      "15         0.083435        0.006901        0.173069       0.029777\n",
+      "16         0.080409        0.006789        0.173489       0.030869\n",
+      "17         0.077025        0.006400        0.172895       0.031411\n",
+      "18         0.074122        0.006114        0.172294       0.032168\n"
      ]
     }
    ],
@@ -841,14 +846,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best RMSE:  0.192\n"
+      "Best tested RMSE:  0.172\n"
      ]
     }
    ],
@@ -860,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -872,18 +877,7 @@
       "Best min child weight: 5\n",
       "Best number of estimators: 100\n",
       "Best gamma: 0.1\n",
-      "Best gamma: 0.5\n",
       "Best subsample: 0.7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\skyma\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\xgboost\\core.py:160: UserWarning: [12:45:30] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0b3782d1791676daf-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:742: \n",
-      "Parameters: { \"col_sample_bytree\" } are not used.\n",
-      "\n",
-      "  warnings.warn(smsg, UserWarning)\n"
      ]
     }
    ],
@@ -917,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -977,8 +971,7 @@
       "[50]\ttrain-rmse:0.15593\tvalidation-rmse:0.20308\n",
       "[51]\ttrain-rmse:0.15613\tvalidation-rmse:0.20300\n",
       "[52]\ttrain-rmse:0.15544\tvalidation-rmse:0.20482\n",
-      "[53]\ttrain-rmse:0.15553\tvalidation-rmse:0.20582\n",
-      "[54]\ttrain-rmse:0.15462\tvalidation-rmse:0.20330\n"
+      "[53]\ttrain-rmse:0.15553\tvalidation-rmse:0.20582\n"
      ]
     }
    ],
@@ -1018,34 +1011,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-rmse:0.36328\tvalidation-rmse:0.38229\n",
-      "[50]\ttrain-rmse:0.02804\tvalidation-rmse:0.23320\n",
-      "[100]\ttrain-rmse:0.01314\tvalidation-rmse:0.23394\n",
-      "[150]\ttrain-rmse:0.00644\tvalidation-rmse:0.23437\n",
-      "[200]\ttrain-rmse:0.00355\tvalidation-rmse:0.23438\n",
-      "[250]\ttrain-rmse:0.00185\tvalidation-rmse:0.23444\n",
-      "[300]\ttrain-rmse:0.00107\tvalidation-rmse:0.23445\n",
-      "[350]\ttrain-rmse:0.00068\tvalidation-rmse:0.23449\n",
-      "[400]\ttrain-rmse:0.00059\tvalidation-rmse:0.23450\n",
-      "[450]\ttrain-rmse:0.00057\tvalidation-rmse:0.23449\n",
-      "[500]\ttrain-rmse:0.00056\tvalidation-rmse:0.23449\n",
-      "[550]\ttrain-rmse:0.00055\tvalidation-rmse:0.23450\n",
-      "[600]\ttrain-rmse:0.00053\tvalidation-rmse:0.23450\n",
-      "[650]\ttrain-rmse:0.00053\tvalidation-rmse:0.23450\n",
-      "[700]\ttrain-rmse:0.00053\tvalidation-rmse:0.23449\n",
-      "[750]\ttrain-rmse:0.00053\tvalidation-rmse:0.23449\n",
-      "[800]\ttrain-rmse:0.00053\tvalidation-rmse:0.23449\n",
-      "[850]\ttrain-rmse:0.00053\tvalidation-rmse:0.23449\n",
-      "[900]\ttrain-rmse:0.00053\tvalidation-rmse:0.23449\n",
-      "[950]\ttrain-rmse:0.00053\tvalidation-rmse:0.23449\n",
-      "[999]\ttrain-rmse:0.00053\tvalidation-rmse:0.23449\n"
+      "[0]\ttrain-rmse:0.38635\tvalidation-rmse:0.39255\n",
+      "[50]\ttrain-rmse:0.15593\tvalidation-rmse:0.20308\n",
+      "[100]\ttrain-rmse:0.14646\tvalidation-rmse:0.20294\n",
+      "[150]\ttrain-rmse:0.13826\tvalidation-rmse:0.19699\n",
+      "[200]\ttrain-rmse:0.13096\tvalidation-rmse:0.19701\n",
+      "[250]\ttrain-rmse:0.12862\tvalidation-rmse:0.19673\n",
+      "[300]\ttrain-rmse:0.12300\tvalidation-rmse:0.19931\n",
+      "[350]\ttrain-rmse:0.12032\tvalidation-rmse:0.19629\n",
+      "[400]\ttrain-rmse:0.11728\tvalidation-rmse:0.19885\n",
+      "[450]\ttrain-rmse:0.11446\tvalidation-rmse:0.19657\n",
+      "[500]\ttrain-rmse:0.11233\tvalidation-rmse:0.20086\n",
+      "[550]\ttrain-rmse:0.11045\tvalidation-rmse:0.19957\n",
+      "[600]\ttrain-rmse:0.10706\tvalidation-rmse:0.19942\n",
+      "[650]\ttrain-rmse:0.10673\tvalidation-rmse:0.19612\n",
+      "[700]\ttrain-rmse:0.10464\tvalidation-rmse:0.19483\n",
+      "[750]\ttrain-rmse:0.10138\tvalidation-rmse:0.19405\n",
+      "[800]\ttrain-rmse:0.10053\tvalidation-rmse:0.19573\n",
+      "[850]\ttrain-rmse:0.09829\tvalidation-rmse:0.19144\n",
+      "[900]\ttrain-rmse:0.09591\tvalidation-rmse:0.19722\n",
+      "[950]\ttrain-rmse:0.09747\tvalidation-rmse:0.19435\n",
+      "[999]\ttrain-rmse:0.09612\tvalidation-rmse:0.19493\n"
      ]
     }
    ],
@@ -1069,7 +1062,7 @@
    "metadata": {},
    "source": [
     "## <b>Observation</b>\n",
-    "Interesting attempt to improve the model but as was shown in early-stop, there is little validation loss improvement even by the time the model reaches 50 rounds.\n",
+    "Interesting attempt to improve the model but as was shown in early-stop, there is little validation loss improvement even by the time the model reaches 50 rounds. model_b will be discarded in favour of the originally trained model.\n",
     "##"
    ]
   },
@@ -1077,21 +1070,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 4 - Visualise the dataset and the model's results, where applicable like feature importance, confusion matrix, etc"
+    "# Task 4 - Visualise the dataset and the model's results, where applicable like feature importance, confusion matrix, etc\n",
+    "\n",
+    "### \n",
+    "<b>References</b>\n",
+    "\n",
+    "C. Simon. (Dec 2022). Your first XGBoost Model in Python - easy to follow tutorial. Available at: https://medium.com/@Machine_Learning_tut/your-first-xgboost-model-in-python-easy-to-follow-tutorial-17c4e0075850 [Accessed Aug 12, 2024]\n",
+    "\n",
+    "###\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import confusion_matrix"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Task 5 - Report the final performance of the selected model using the appropriate performance metrics like accuracy, F1-score, etc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      0.96      0.96       102\n",
+      "           1       0.95      0.94      0.95        83\n",
+      "\n",
+      "    accuracy                           0.95       185\n",
+      "   macro avg       0.95      0.95      0.95       185\n",
+      "weighted avg       0.95      0.95      0.95       185\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "\n",
+    "print(classification_report(y_test, model.predict(dtest_reg) > 0.5))"
    ]
   }
  ],
