--- a/module 3 final assignment/final assignment part 2.ipynb
+++ b/module 3 final assignment/final assignment part 2.ipynb
@@ -32,13 +32,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "\n",
+    "# Define your image parameters\n",
+    "image_height = 84  \n",
+    "image_width = 84   \n",
+    "batch_size = 32    \n",
+    "\n",
+    "# Data Augmentation and Preprocessing\n",
+    "train_datagen = ImageDataGenerator(https://1drv.ms/f/s!AntMvxHqUvC_h7p4D75rLWKgV1iEtw?e=eG98BR\n",
+    "    rescale=1./255,          # Normalize pixel values to [0, 1]\n",
+    "    shear_range=0.2,         # Apply shear transformations\n",
+    "    zoom_range=0.2,          # Apply zoom transformations\n",
+    "    horizontal_flip=True)    # Randomly flip images horizontally\n",
+    "\n",
+    "# Load images from the folder (with subfolders for each class)\n",
+    "train_generator = train_datagen.flow_from_directory(\n",
+    "    'path/to/your/image/folder',  # Replace with the actual path to your main folder\n",
+    "    target_size=(image_height, image_width),\n",
+    "    batch_size=batch_size,\n",
+    "    class_mode='categorical'  # Use 'categorical' for multi-class classification\n",
+    ")\n",
+    "\n",
+    "# (Optional) If you have separate validation data, load it similarly\n",
+    "# validation_generator = ...\n",
+    "\n",
+    "# Access your data\n",
+    "for images, labels in train_generator:\n",
+    "    # 'images' will contain a batch of images\n",
+    "    # 'labels' will contain the corresponding labels (one-hot encoded)\n",
+    "    # You can now use these images and labels to train your CNN model\n",
+    "    break  # Stop after one batch (remove this if you want to iterate over the entire dataset)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -49,13 +78,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid decimal literal (2773266005.py, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 10\u001b[1;36m\u001b[0m\n\u001b[1;33m    train_datagen = ImageDataGenerator(https://1drv.ms/f/s!AntMvxHqUvC_h7p4D75rLWKgV1iEtw?e=eG98BR\u001b[0m\n\u001b[1;37m                                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid decimal literal\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": []
   },
   {
@@ -68,11 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -86,11 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -104,11 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -122,18 +144,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
