--- a/module 3 final assignment/final assignment part 2.ipynb
+++ b/module 3 final assignment/final assignment part 2.ipynb
@@ -90,7 +90,54 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "\n",
+    "# Model Architecture\n",
+    "model = Sequential()\n",
+    "model.add(Conv2D(32, (3, 3), activation='relu', input_shape=(image_height, image_width, channels)))\n",
+    "model.add(MaxPooling2D((2, 2)))\n",
+    "model.add(Conv2D(64, (3, 3), activation='relu'))\n",
+    "model.add(MaxPooling2D((2, 2)))\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(64, activation='relu'))\n",
+    "model.add(Dense(num_classes, activation='sigmoid'))  # Sigmoid for multi-label\n",
+    "\n",
+    "# Compile the model\n",
+    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy']) \n",
+    "\n",
+    "# Data Augmentation (Optional but highly recommended)\n",
+    "train_datagen = ImageDataGenerator(\n",
+    "        rescale=1./255,\n",
+    "        shear_range=0.2,\n",
+    "        zoom_range=0.2,\n",
+    "        horizontal_flip=True)\n",
+    "\n",
+    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "\n",
+    "train_generator = train_datagen.flow_from_directory(\n",
+    "        'train_data_directory',\n",
+    "        target_size=(image_height, image_width),\n",
+    "        batch_size=batch_size,\n",
+    "        class_mode='categorical')  # Categorical for multi-label\n",
+    "\n",
+    "validation_generator = test_datagen.flow_from_directory(\n",
+    "        'validation_data_directory',\n",
+    "        target_size=(image_height, image_width),\n",
+    "        batch_size=batch_size,\n",
+    "        class_mode='categorical')\n",
+    "\n",
+    "# Train the model\n",
+    "model.fit(\n",
+    "        train_generator,\n",
+    "        steps_per_epoch=train_generator.samples // batch_size,\n",
+    "        epochs=epochs,\n",
+    "        validation_data=validation_generator,\n",
+    "        validation_steps=validation_generator.samples // batch_size)\n"
+   ]
   },
   {
    "cell_type": "markdown",
