--- a/module 3 final assignment/final assignment part 2.ipynb
+++ b/module 3 final assignment/final assignment part 2.ipynb
@@ -31,9 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape (38352048.py, line 18)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[4], line 18\u001b[1;36m\u001b[0m\n\u001b[1;33m    target_size=(image_height, image_width),\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
@@ -44,15 +53,14 @@
     "batch_size = 32    \n",
     "\n",
     "# Data Augmentation and Preprocessing\n",
-    "train_datagen = ImageDataGenerator(https://1drv.ms/f/s!AntMvxHqUvC_h7p4D75rLWKgV1iEtw?e=eG98BR\n",
+    "train_datagen = ImageDataGenerator(\n",
     "    rescale=1./255,          # Normalize pixel values to [0, 1]\n",
     "    shear_range=0.2,         # Apply shear transformations\n",
     "    zoom_range=0.2,          # Apply zoom transformations\n",
     "    horizontal_flip=True)    # Randomly flip images horizontally\n",
     "\n",
     "# Load images from the folder (with subfolders for each class)\n",
-    "train_generator = train_datagen.flow_from_directory(\n",
-    "    'path/to/your/image/folder',  # Replace with the actual path to your main folder\n",
+    "train_generator = train_datagen.flow_from_directory('C:\\Users\\aagunbia\\UNI WORK\\Public-1\\module 3 final assignment\\dataset2'\n",
     "    target_size=(image_height, image_width),\n",
     "    batch_size=batch_size,\n",
     "    class_mode='categorical'  # Use 'categorical' for multi-class classification\n",
