--- a/module 3 final assignment/final assignment part 2.ipynb
+++ b/module 3 final assignment/final assignment part 2.ipynb
@@ -31,15 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape (38352048.py, line 18)",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[4], line 18\u001b[1;36m\u001b[0m\n\u001b[1;33m    target_size=(image_height, image_width),\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape\n"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtf\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mkeras\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mimage\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ImageDataGenerator\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Define your image parameters\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
      ]
     }
    ],
@@ -60,21 +63,16 @@
     "    horizontal_flip=True)    # Randomly flip images horizontally\n",
     "\n",
     "# Load images from the folder (with subfolders for each class)\n",
-    "train_generator = train_datagen.flow_from_directory('C:\\Users\\aagunbia\\UNI WORK\\Public-1\\module 3 final assignment\\dataset2'\n",
+    "train_generator = train_datagen.flow_from_directory('C:\\\\Users\\\\aagunbia\\\\UNI WORK\\\\Public-1\\\\module 3 final assignment\\\\dataset2',\n",
     "    target_size=(image_height, image_width),\n",
     "    batch_size=batch_size,\n",
     "    class_mode='categorical'  # Use 'categorical' for multi-class classification\n",
     ")\n",
     "\n",
-    "# (Optional) If you have separate validation data, load it similarly\n",
-    "# validation_generator = ...\n",
     "\n",
     "# Access your data\n",
     "for images, labels in train_generator:\n",
-    "    # 'images' will contain a batch of images\n",
-    "    # 'labels' will contain the corresponding labels (one-hot encoded)\n",
-    "    # You can now use these images and labels to train your CNN model\n",
-    "    break  # Stop after one batch (remove this if you want to iterate over the entire dataset)"
+    "    break "
    ]
   },
   {
