--- a/module 3 final assignment/final assignment part 2.ipynb
+++ b/module 3 final assignment/final assignment part 2.ipynb
@@ -125,7 +125,7 @@
     "test_datagen = ImageDataGenerator(rescale=1./255)\n",
     "\n",
     "train_generator = train_datagen.flow_from_directory(\n",
-    "        'train_data_directory',\n",
+    "        'C:\\\\Users\\\\aagunbia\\\\UNI WORK\\\\Public-1\\\\module 3 final assignment\\\\dataset2,\n",
     "        target_size=(image_height, image_width),\n",
     "        batch_size=batch_size,\n",
     "        class_mode='categorical')  # Categorical for multi-label\n",
