removed dayofweek from the features as it is already accounted for and created additional weighing on that feature.

--- a/module 3 final assignment/final assignment part 1.ipynb
+++ b/module 3 final assignment/final assignment part 1.ipynb
@@ -583,7 +583,6 @@
     "        'year': dates.dt.year,\n",
     "        'month': dates.dt.month,\n",
     "        'day': dates.dt.day,\n",
-    "        'dayofweek': dates.dt.dayofweek,\n",
     "        'hour': dates.dt.hour\n",
     "    })"
    ]
@@ -617,7 +616,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\skyma\\AppData\\Local\\Temp\\ipykernel_11116\\1019460975.py:5: UserWarning: The argument 'infer_datetime_format' is deprecated and will be removed in a future version. A strict version of it is now the default, see https://pandas.pydata.org/pdeps/0004-consistent-to-datetime-parsing.html. You can safely remove this argument.\n",
+      "C:\\Users\\skyma\\AppData\\Local\\Temp\\ipykernel_24904\\1019460975.py:5: UserWarning: The argument 'infer_datetime_format' is deprecated and will be removed in a future version. A strict version of it is now the default, see https://pandas.pydata.org/pdeps/0004-consistent-to-datetime-parsing.html. You can safely remove this argument.\n",
       "  dates = pd.to_datetime(dates, infer_datetime_format=True, errors='coerce')\n"
      ]
     }
@@ -683,10 +682,10 @@
     "# There are too many NA in var4 to simply remove those rows so we will try to impute the missing values #\n",
     "# We will have to watch the weighting of var4 feature as it will be heavily weighted to the interpolated values #\n",
     "\n",
-    "# TO DO: I don't like the interpolation of the var 4 feature. Hoping to use an algorithm that supports null data or find a regression pattern to better fit OR it's possible this is not used as feature data at all.\n",
+    "# TODO: I don't like the interpolation of the var 4 feature. Hoping to use an algorithm that supports null data or find a regression pattern to better fit OR it's possible this is not used as feature data at all.\n",
     "\n",
     "# Data normalization #\n",
-    "numerical_features = ['var1', 'var2', 'var4', 'var5', 'year', 'month', 'day', 'dayofweek', 'hour']\n",
+    "numerical_features = ['var1', 'var2', 'var4', 'var5', 'year', 'month', 'day', 'hour']\n",
     "categorical_features = ['var3', 'var6']\n",
     "\n",
     "\n",
